--- a/app.json
+++ b/app.json
@@ -1,16 +1,17 @@
 {
 	"id": "com.sonos",
-	"version": "1.0",
+	"version": "2.0.0",
+	"compatibility": ">=1.0.0",
 	"name": {
 		"en": "Sonos"
 	},
 	"author": {
-		"name": "Emile Nijssen",
-		"website": "http://www.emilenijssen.nl"
+		"name": "Athom B.V.",
+		"website": "https://www.athom.com"
 	},
 	"images": {
-		"large": "large.jpg",
-		"small": "small.jpg"
+		"large": "/assets/images/large.jpg",
+		"small": "/assets/images/small.jpg"
 	},
 	"drivers": [
 		{
@@ -19,23 +20,58 @@
 				"en": "Sonos"
 			},
 			"class": "speaker",
-			"capabilities": [ "radio" ],
+			"capabilities": [ "speaker_playing", "speaker_prev", "speaker_next", "volume_set" ],
+			"capabilitiesOptions": {
+				"speaker_playing": {
+					"title": " "
+				},
+				"speaker_prev": {
+					"title": " "
+				},
+				"speaker_next": {
+					"title": " "
+				}
+			},
+			"mobile": {
+				"components": [
+					{
+						"id": "icon",
+						"capabilities": []
+					},
+					{
+						"id": "button",
+						"capabilities": [ "speaker_prev", "speaker_playing", "speaker_next" ],
+						"options": {
+							"toggle": [ "speaker_playing" ],
+							"icons": {
+								"speaker_prev": "drivers/sonos/assets/mobile/prev.svg",
+								"speaker_next": "drivers/sonos/assets/mobile/next.svg",
+								"speaker_playing": {
+									"true": "drivers/sonos/assets/mobile/pause.svg",
+									"false": "drivers/sonos/assets/mobile/play.svg"
+								}
+							}
+						}
+					},
+					{
+						"id": "slider",
+						"capabilities": [ "volume_set" ]
+					}
+				]
+			},
 			"pair": [
 				{
-					"id": "list_speakers",
+					"id": "list_devices",
 					"template": "list_devices",
 					"navigation": {
-						"next": "add_speakers"
+						"next": "add_devices"
 					}
 				},
 				{
-					"id": "add_speakers",
+					"id": "add_devices",
 					"template": "add_devices"
 				}
 			]
 		}
-	],
-	"dependencies": {
-		"sonos": "*"
-	}
+	]
 }
