--- a/app.json
+++ b/app.json
@@ -73,5 +73,99 @@
 				}
 			]
 		}
-	]
+	],
+	"flow": {
+		"actions": [
+			{
+				"id": "play",
+				"title": {
+					"en": "Play"
+				},
+				"args": [
+					{
+						"type": "device",
+						"name": "device",
+						"filter": {
+							"driver_id": "sonos",
+							"capabilities": "speaker_playing"
+						}
+					}
+				]
+			},
+			{
+				"id": "pause",
+				"title": {
+					"en": "Pause"
+				},
+				"args": [
+					{
+						"type": "device",
+						"name": "device",
+						"filter": {
+							"driver_id": "sonos",
+							"capabilities": "speaker_playing"
+						}
+					}
+				]
+			},
+			{
+				"id": "prev",
+				"title": {
+					"en": "Previous"
+				},
+				"args": [
+					{
+						"type": "device",
+						"name": "device",
+						"filter": {
+							"driver_id": "sonos",
+							"capabilities": "speaker_prev"
+						}
+					}
+				]
+			},
+			{
+				"id": "next",
+				"title": {
+					"en": "Next"
+				},
+				"args": [
+					{
+						"type": "device",
+						"name": "device",
+						"filter": {
+							"driver_id": "sonos",
+							"capabilities": "speaker_next"
+						}
+					}
+				]
+			},
+			{
+				"id": "volume_set",
+				"title": {
+					"en": "Set volume"
+				},
+				"args": [
+					{
+						"type": "device",
+						"name": "device",
+						"filter": {
+							"driver_id": "sonos",
+							"capabilities": "volume_set"
+						}
+					},
+					{
+						"type": "range",
+						"name": "volume",
+						"min": 0,
+						"max": 1,
+						"step": 0.01,
+						"label": "%",
+						"labelMultiplier": 100,
+						"labelDecimals": 0
+					}
+				]
+			}
+		]
+	}
 }
