--- a/app.json
+++ b/app.json
@@ -17,6 +17,12 @@
 		"large": "/assets/images/large.png",
 		"small": "/assets/images/small.png"
 	},
+	"media": [
+		"play",
+		"search",
+		"getPlaylists",
+		"getPlaylist"
+	],
 	"drivers": [
 		{
 			"id": "sonos",
